Close sidebar when clicking on prev browser button, blur geocoder on result

--- a/website/templates/components/map.pug
+++ b/website/templates/components/map.pug
@@ -19,7 +19,7 @@ script.
 		container: 'map',
 		pitchWithRotate: false,
 		dragRotate: false,
-		hash: true,
+		hash: "map",
 		bounds: [-5.010, 41.212, 10.019, 51.234],
 		style: !{JSON.stringify(mapstyle)}
 	});
