--- a/website/templates/components/map_sidebar_feature.pug
+++ b/website/templates/components/map_sidebar_feature.pug
@@ -102,6 +102,7 @@ script.
 			const buttonIcon = document.createElement("span");
 			buttonIcon.classList.add("d-inline-block", "container-svg-fa");
 			buttonIcon.style.height = "24px";
+			buttonIcon.style.width = "14px";
 			buttonIcon.appendChild(document.getElementById("map-marker-plus").firstChild.cloneNode(true));
 			button.appendChild(buttonIcon);
 
