--- a/website/templates/components/geocoder.pug
+++ b/website/templates/components/geocoder.pug
@@ -24,6 +24,7 @@ script.
 						searchTextField.value = results[0].display_name;
 						const [ minlat, maxlat, minlon, maxlon ] = results[0].boundingbox.map(v => parseFloat(v));
 						const [ south, north, west, east ] = results[0].boundingbox.map(v => parseFloat(v));
+						searchTextField.blur();
 						map.fitBounds([minlon, minlat, maxlon, maxlat]);
 					}
 				})
