Live statistics of user edits

--- a/website/templates/components/map_editor.pug
+++ b/website/templates/components/map_editor.pug
@@ -166,6 +166,7 @@ script.
 						}
 
 						cancelAddNewFeature(false, true);
+						addContribution('add');
 					})
 				))
 				.catch(e => {
@@ -186,6 +187,7 @@ script.
 					editorDoneDom.classList.remove("d-none");
 					loadNotesOnMap();
 					cancelAddNewFeature(false, true);
+					addContribution('add');
 				})
 				.catch(e => {
 					console.error(e);
