--- a/website/templates/components/map_sidebar_feature.pug
+++ b/website/templates/components/map_sidebar_feature.pug
@@ -65,7 +65,12 @@ script.
 
 			// Hide feature on map
 			showMarker();
-			window.dispatchEvent(new CustomEvent("pdm_sidebar_use", { detail: { close: true } }));
+			if(type === "done") {
+				addContribution('add');
+			}
+			else {
+				window.dispatchEvent(new CustomEvent("pdm_sidebar_use", { detail: { close: true } }));
+			}
 			filteredUuids.push(uuid);
 			map.setFilter(feature.layer.id, ["!", ["in", ["get", "uuid"], ["literal", filteredUuids]]]);
 		};
@@ -81,7 +86,7 @@ script.
 				notes.features = notes.features.filter(f => f.properties.id !== p.id);
 				source.setData(notes);
 				showMarker();
-				window.dispatchEvent(new CustomEvent("pdm_sidebar_use", { detail: { close: true } }));
+				addContribution('add');
 			})
 			.catch(e => {
 				alert("Une erreur s'est produite lors de la modification de la note");
