--- a/website/templates/components/stats.pug
+++ b/website/templates/components/stats.pug
@@ -15,7 +15,7 @@ div.row
 			div#stats-podium.col-md-7.row.justify-content-start.align-items-end.no-gutters.mb-3.mb-md-0
 			div.overflow-auto.col-md-5(style="max-height: 300px")
 				table.table.table-sm
-					thead
+					thead.sticky-top.thead-light
 						tr
 							th(scope="col") #
 							th(scope="col") Pseudo
