Fix leaderboard CSS

--- a/website/templates/style.css
+++ b/website/templates/style.css
@@ -146,6 +146,7 @@ a.pdm-wide-link.map {
 	background-color: white;
 	border-bottom: 1px solid #e5e5e5;
 	margin-bottom: 2rem;
+	z-index: 10000;
 }
 
 a.navbar-brand {
